[package]
name = "imageinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
rand = "0.8.5"
reqwest = "0.11.14"
serde = "1.0.202"
serde_json = "1.0.39"
sev = "3.1.1"
sevsnp = { git = "https://github.com/EmmEff/sevsnp.git", version = "0.1.0" }
oci-distribution = { version = "0.10.0", default-features = false }
image-rs = { git = "https://github.com/confidential-containers/guest-components", rev = "fea1f4e244d8fe8bc7270278ef46812c95771a61" }
